--- a/need.rc
+++ b/need.rc
@@ -1,5 +1,6 @@
 # need.rc - Priority-based filtering configuration
 # Include in .taskrc with: include ~/.task/config/need.rc
+# version 0.4.5
 
 # UDA Definition
 uda.priority.type=string
